# ml

./: .gitignore  pyproject.toml  requirements.txt
src/: Housing.ipynb  learning1.ipynb  output.html  output2.html
src/datasets/lifesat/: gdp_per_capita_2022.csv
