[tool.poetry]
name = "ml"
version = "0.1.0"
description = "learning ml & ai"
authors = ["gideonmandu <gideonmandu@gmail.com>"]
#packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.0.2"
rich = "^10.16.2"
pandas = "^1.3.5"
seaborn = "^0.11.2"
numpy = "^1.22.0"
jupyterlab = "^3.2.5"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
